--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,9 @@ a {
   text-decoration: none;
 }
 
-h1 {
+h1,
+h2,
+h3 {
   padding-bottom: 20px;
 }
 
@@ -26,6 +28,48 @@ h1 {
   max-width: 1100px;
   padding: 0 20px;
   overflow: auto;
+}
+
+.text-primary {
+  color: #f7c08a;
+}
+.btn {
+  display: inline-block;
+  font-size: 18px;
+  background: #333;
+  color: #fff;
+  padding: 13px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #f7c08a;
+  color: #333;
+}
+
+.btn-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #fff;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-primary {
+  background: #f7c08a;
+  color: #333;
+}
+
+.py-30 {
+  padding: 30px 0;
 }
 
 #navbar {
@@ -56,7 +100,7 @@ h1 {
 #navbar ul li a:hover,
 #navbar ul li a.current {
   background: #444;
-  color: f7c08a;
+  color: #f7c08a;
 }
 
 #navbar h1 {
@@ -73,4 +117,140 @@ h1 {
   color: #fff;
   text-align: center;
   padding-top: 170px;
+}
+
+#showcase .showcase-content h1 {
+  font-size: 60px;
+  line-height: 1.2em;
+}
+
+#showcase .showcase-content p {
+  padding-bottom: 20px;
+  line-height: 1.7em;
+}
+
+#info {
+  height: 400px;
+}
+
+#info .info-content {
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 50px 30px;
+  overflow: hidden;
+}
+
+#info .info-content p {
+  padding-bottom: 30px;
+}
+
+#info .info-img {
+  float: left;
+  width: 50%;
+  background: url(/img/photo-1.jpg) no-repeat;
+  min-height: 100%;
+}
+
+#features .box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+#features .box i {
+  margin-bottom: 10px;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background: #444;
+  color: #fff;
+}
+
+.clear {
+  clear: both;
+}
+
+#about-info .info-left {
+  float: left;
+  width: 50%;
+  min-height: 100%;
+}
+
+#about-info .info-right {
+  float: right;
+  width: 50%;
+  min-height: 100%;
+}
+
+#about-info .info-right img {
+  display: block;
+  margin: auto;
+  width: 70%;
+  border-radius: 50%;
+}
+
+#testimonials {
+  height: 600px;
+  background: url(/img/test-bg.jpg) no-repeat center center/cover;
+}
+
+#testimonials h2 {
+  color: #fff;
+  text-align: center;
+}
+
+#testimonials .testimonial {
+  padding: 20px;
+  margin-bottom: 40px;
+  border-radius: 5px;
+  opacity: 0.9;
+}
+
+#testimonials .testimonial img {
+  width: 70px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+#contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+#contact-form .form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#contact-form .form-group input,
+#contact-form .form-group textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+#contact-form .form-group textarea {
+  height: 200px;
+}
+
+#contact-form .form-group input:focus,
+#contact-form .form-group textarea:focus {
+  outline: none;
+  border-color: #f7c08a;
+}
+
+#contact-info .box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+#contact-info .box i {
+  margin-bottom: 10px;
 }
