--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ h3 {
 }
 
 #showcase {
-  background: url(/img/showcase.jpg) no-repeat center center/cover;
+  background: url(../img/showcase.jpg) no-repeat center center/cover;
   height: 600px;
 }
 
@@ -149,7 +149,7 @@ h3 {
 #info .info-img {
   float: left;
   width: 50%;
-  background: url(/img/photo-1.jpg) no-repeat;
+  background: url(../img/photo-1.jpg) no-repeat;
   min-height: 100%;
 }
 
@@ -196,7 +196,7 @@ footer {
 
 #testimonials {
   height: 600px;
-  background: url(/img/test-bg.jpg) no-repeat center center/cover;
+  background: url(../img/test-bg.jpg) no-repeat center center/cover;
 }
 
 #testimonials h2 {
